# libgen_scraper

./: Cargo.toml
benches/: benchmark_page.htm  scraping.rs
src/: book.rs  client.rs  downloader.rs  lib.rs  processor.rs  scraper.rs  util.rs
tests/: integration_test.rs
