[package]
name = "libgen_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
reqwest = {version = "0.11.24", features = ["blocking"]}
scraper = "0.18.1"
tokio ={ version = "1.36.0",features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
urlencoding = "2.1.3"

[lib]
name = "libgen_scraper"
path = "src/lib.rs"
